--- a/index.html
+++ b/index.html
@@ -3,14 +3,39 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Пример добавления метки на карту - JavaScript API Яндекс.Карт 2.0</title>
-<!-- Подключаем API  карт 2.x  -->
-<script src="http://api-maps.yandex.ru/2.1/?load=package.full&lang=ru-RU" type="text/javascript"></script>
-<script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
-<script src="group.js" type="text/javascript"></script>
-<script src="object_list.js" type="text/javascript"></script>
+
+<style>
+
+</style>
 </head>
  
 <body>
 <div id="map" style="width:600px; height:400px"></div>
+<div class="input-div" style="margin-top: 25px;">
+<input type="text" name="" id="x" placeholder="x" value="55.744522"><br>
+<input type="text" name="" id="y" placeholder="y" value="37.616378"><br>
+<input type="text" name="" id="color" placeholder="цвет" value="islands#violetIcon"><br>
+<input type="text" name="" id="img" placeholder="img" value="1.jpg"><br>
+<input type="text" name="" id="title" placeholder="title" value="Футбольное поле"><br>
+<input type="text" name="" id="desc" placeholder="desc" value="Короче, мектептің артында"><br>
+<button id="add">Добавить</button>
+</div>
+
+<!-- Подключаем API  карт 2.x  -->
+<script src="http://api-maps.yandex.ru/2.1/?load=package.full&lang=ru-RU" type="text/javascript"></script>
+<script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
+
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
+<script src="object_list.js" type="text/javascript"></script>
+
+<script>
+</script>
 </body>
 </html>
